Codes Minifiés HTML et CSS

--- a/contact.html
+++ b/contact.html
@@ -1,104 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
-		<meta name="description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région.">
-		<meta name="keywords" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région.">
-		<meta name="copyright" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="distribution" content="global">
-		<meta name="language" content="fr">
-		<meta name="owner" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="author" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="robots" content="index, follow">
-		<meta name="city" content="Estaimpuis">
-		<meta name="country" content="Belgique">
-		<title>Contact | Philippe Vandenbrande | Menuisier & Charpentier</title>
-		<!-- Favicons -->
-		<link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png">
-		<!-- /Favicons -->
-		<link rel="stylesheet" href="./css/main.css" type="text/css">
-		<link rel="stylesheet" href="./css/font-colibri.css" type="text/css">
-		<link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css">
-		<link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css">
-		<link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css">
-		<script type="text/javascript" src="./js/tarteaucitron.fr.js" async></script>
-		<script type="text/javascript" src="./js/tarteaucitron.services.js" async></script>
-	</head>
-	<body class="" style="">
-		<div class="page_loader"></div>
-		<!-- header -->
-		<header role="banner" class="">
-			<a id="toggle" data-toggle="deploy_h" data-toggledest="body">
-				<i>
-					<span></span>
-					<span></span>
-					<span></span>
-				</i>
-			</a>
-			<div id="logo">
-				<a href="index.html">
-                    <img class="lodjo" src="image/logophil2.png" alt="logo philippe vandenbrande">
-                </a>
-			</div>
-			<nav role="navigation" id="menu">
-				<ul class="fst">
-                    <li><a href="./index.html">Accueil</a></li>
-					<li><a href="./projets.html">Réalisations</a></li>
-					<li><a href="./propos.html">A propos</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main role="main">
-			<aside role="complementary"></aside>
-			<div>
-				<section class="wysi">
-                    <h1>Me Contacter</h1>
-                    <p>
-                        <span style="font-size:16px">Vous avez un projet ? Vous souhaitez un devis ou tout autre information ? N'hésitez pas à me contacter afin d'échanger ensemble.&nbsp;</span>
-                    </p>
-					<div class="content">
-                        <section class="section_type01 mb050">
-                            <h2 class="h2_type09">Téléphone</h2>
-                            <ul class="list_contact">
-								<li>
-									<a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1"></a>
-								</li>
-								<li class="tel" style="margin-right:0;">
-									<a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1">
-										<span>(+32) 04 93 71 95 97</span>
-									</a>
-								</li>
-                            </ul>
-                        </section> <section class="section_type01 mb050">
-                        <h2 class="h2_type09">Email</h2>
-                        <ul class="list_contact">
-                            <li class="form"><a href="mailto:contact@philippevandenbrande.be"><span>contact@philippevandebrande.be</span></a></li>
-                        </ul>
-                        </section>
-					</div>
-				</section>
-			</div>
-		</main>
-		<!-- footer -->
-		<footer>
-			<div class="copy">
-				<a class="copy" href="https://adrienribeiro.com/">Adrien Ribeiro | 2022 | Tous droits réservés.</a>
-			</div>
-		</footer>
-		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
-		<script type="text/javascript" src="./js/jquery.min.js"></script>
-		<script type="text/javascript" src="./js/jquery-migrate.min.js" async></script>
-		<script type="text/javascript" src="./js/validationEngine.js" async></script>
-		<script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script>
-		<script type="text/javascript" src="./js/jquery.cycle2.min.js"></script>
-		<script type="text/javascript" src="./js/colibri-antispam.js" async></script>
-		<script type="text/javascript" src="./js/jquery.imagefit.js" async></script>
-		<script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script>
-		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
-		<script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
-		<script type="text/javascript" src="./js/front-socle.js" async></script>
-	</body>
-</html>
+<!DOCTYPE html><html lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"><meta name="description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région."><meta name="keywords" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région."><meta name="copyright" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="distribution" content="global"><meta name="language" content="fr"><meta name="owner" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="author" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="robots" content="index, follow"><meta name="city" content="Estaimpuis"><meta name="country" content="Belgique"><title>Contact | Philippe Vandenbrande | Menuisier & Charpentier</title><link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png"><link rel="stylesheet" href="./css/main.css" type="text/css"><link rel="stylesheet" href="./css/font-colibri.css" type="text/css"><link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css"><link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css"><link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css"><script type="text/javascript" src="./js/tarteaucitron.fr.js" async></script><script type="text/javascript" src="./js/tarteaucitron.services.js" async></script></head><body class="" style=""><div class="page_loader"></div><header role="banner" class=""><a id="toggle" data-toggle="deploy_h" data-toggledest="body"><i><span></span><span></span><span></span></i></a><div id="logo"><a href="index.html"> <img class="lodjo" src="image/logophil2.png" alt="logo philippe vandenbrande"> </a></div><nav role="navigation" id="menu"><ul class="fst"> <li><a href="./index.html">Accueil</a></li><li><a href="./projets.html">Réalisations</a></li><li><a href="./propos.html">A propos</a></li><li><a href="./contact.html">Contact</a></li></ul></nav></header><main role="main"><aside role="complementary"></aside><div><section class="wysi"> <h1>Me Contacter</h1> <p> <span style="font-size:16px">Vous avez un projet ? Vous souhaitez un devis ou tout autre information ? N'hésitez pas à me contacter afin d'échanger ensemble.&nbsp;</span> </p><div class="content"> <section class="section_type01 mb050"> <h2 class="h2_type09">Téléphone</h2> <ul class="list_contact"><li><a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1"></a></li><li class="tel" style="margin-right:0;"><a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1"><span>(+32) 04 93 71 95 97</span></a></li></ul> </section> <section class="section_type01 mb050"> <h2 class="h2_type09">Email</h2> <ul class="list_contact"> <li class="form"><a href="mailto:contact@philippevandenbrande.be"><span>contact@philippevandebrande.be</span></a></li></ul> </section></div></section></div></main><footer><div class="copy"><a class="copy" href="https://adrienribeiro.com/">Adrien Ribeiro | 2022 | Tous droits réservés.</a></div></footer><script type="text/javascript" src="./js/tarteaucitron.js" async></script><script type="text/javascript" src="./js/jquery.min.js"></script><script type="text/javascript" src="./js/jquery-migrate.min.js" async></script><script type="text/javascript" src="./js/validationEngine.js" async></script><script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script><script type="text/javascript" src="./js/jquery.cycle2.min.js"></script><script type="text/javascript" src="./js/colibri-antispam.js" async></script><script type="text/javascript" src="./js/jquery.imagefit.js" async></script><script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script><script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script><script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script><script type="text/javascript" src="./js/front-socle.js" async></script></body></html>
