--- a/index.html
+++ b/index.html
@@ -1,153 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr-BE">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
-		<meta name="description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région.">
-		<meta name="keywords" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région.">
-		<meta name="copyright" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="distribution" content="global">
-		<meta name="language" content="fr">
-		<meta name="owner" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="author" content="Philippe Vandenbrande | Menuiserie & Charpentrie">
-		<meta name="robots" content="index, follow">
-		<meta name="city" content="Estaimpuis">
-		<meta name="country" content="Belgique">
-		<meta property="og:title" content="Philippe Vandenbrande | Menuisier & Charpentier"/>
-		<meta property="og:description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région. Venez découvrir son travail !"/>
-		<meta property="og:image" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg" />
-		<meta property="og:image:secure_url" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg" />
-		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="627" />
-		<meta property="og:image:alt" content="Menuiserie" />
-		<title>Accueil | Philippe Vandenbrande | Menuisier & Charpentier</title>
-		<!-- Favicons -->
-		<link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png">
-		<!-- /Favicons -->
-		<link rel="stylesheet" href="./css/main.css" type="text/css">
-		<link rel="stylesheet" href="./css/font-colibri.css" type="text/css">
-		<link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css">
-		<link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css">
-		<link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css">
-		<script type="text/javascript" src="./js/tarteaucitron.fr.js" async></script>
-		<script type="text/javascript" src="./js/tarteaucitron.services.js" async></script>
-		<style type="text/css">
-			div#tarteaucitronRoot.tarteaucitronBeforeVisible:before
-			{
-				content: '';
-				position: fixed;
-				width: 100%;
-				height: 100%;
-				background: white;
-				top: 0;
-				left: 0;
-				z-index: 999;
-				opacity: 0.5;
-			}
-
-			div#tarteaucitronAlertBig:before
-			{
-				content: '';
-				font-size: 50px;
-			}
-
-			body #tarteaucitronRoot div#tarteaucitronAlertBig
-			{
-				width: 60%;
-				min-width: 285px;
-				height: auto;
-				margin: auto;
-				left: 50%;
-				top: 50%;
-				transform: translate(-50%, -50%);
-				box-shadow: 0 0 9000px #000;
-				border-radius: 20px;
-				padding: 50px 0;
-			}
-
-			span#tarteaucitronDisclaimerAlert
-			{
-				padding: 0 30px;
-			}
-
-			#tarteaucitronRoot span#tarteaucitronDisclaimerAlert
-			{
-				margin: 50px 0;
-				display: block;
-				text-align: center;
-				font-size: 21px;
-			}
-		</style>
-		<script type="text/javascript" src="./js/" async></script>
-	</head>
-	<body class="home" style="">
-		<div class="page_loader"></div>
-		<!-- header -->
-		<header role="banner">
-			<a id="toggle" data-toggle="deploy_h" data-toggledest="body">
-				<i>
-					<span></span>
-					<span></span>
-					<span></span>
-				</i>
-			</a>
-			<h1 id="logo">
-                <a href="index.html">
-                    <img class="lodjo" src="image/logophil2.png" alt="logo philippe vandenbrande">
-                </a>
-            </h1>
-			<nav role="navigation" id="menu">
-				<ul class="fst">
-					<li><a href="./index.html">Accueil</a></li>
-					<li><a href="./projets.html">Réalisations</a></li>
-					<li><a href="./propos.html">A propos</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<!-- content-->
-		<main role="main">
-			<div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="5000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;">
-				<div id="sliderCaption">
-					<h2>
-					</h2>
-				</div>
-				<div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque mouvement trouve sa place pour que l'ensemble prenne vie." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;">
-					<img src="./image/menuiserie11.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
-				</div>
-				<div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la 
-                passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
-					<img src="./image/menuiserie22.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
-                </div>
-                <div class="slide cycle-slide cycle-slide-active" data-caption="Le bois est  la plus noble des matière de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
-					<img src="./image/menuiserie33.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
-                </div>
-                <div class="slide cycle-slide cycle-slide-active" data-caption="Venez découvrir le véritable artisanat. Mon engagement, votre satisfaction d'un travail unique et sur-mesure" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;">
-					<img src="./image/menuiserie44.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;">
-				</div>>
-			</div>
-		</main>
-		<footer role="contentinfo"></footer>
-		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
-		<script type="text/javascript" src="./js/jquery.min.js"></script>
-		<script type="text/javascript" src="./js/jquery-migrate.min.js" async></script>
-		<script type="text/javascript" src="./js/validationEngine.js" async></script>
-		<script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script>
-		<script type="text/javascript" src="./js/jquery.cycle2.min.js"></script>
-		<script type="text/javascript" src="./js/colibri-antispam.js" async></script>
-		<script type="text/javascript" src="./js/jquery.imagefit.js" async></script>
-		<script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script>
-		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
-		<script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
-		<script type="text/javascript" src="./js/front-socle.js" async></script>
-		<script type="text/javascript">
-			function fitting() { $('#home_slider').imagefit(); }
-			$(function()
-				{
-				$(window).load(function() {fitting(); $(window).resize(function(){ fitting(); }); });
-				});
-		</script>
-	</body>
-</html>
+<!DOCTYPE html><html lang="fr-BE"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"><meta name="description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région."><meta name="keywords" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région."><meta name="copyright" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="distribution" content="global"><meta name="language" content="fr"><meta name="owner" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="author" content="Philippe Vandenbrande | Menuiserie & Charpentrie"><meta name="robots" content="index, follow"><meta name="city" content="Estaimpuis"><meta name="country" content="Belgique"><meta property="og:title" content="Philippe Vandenbrande | Menuisier & Charpentier"/><meta property="og:description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région. Venez découvrir son travail !"/><meta property="og:image" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg"/><meta property="og:image:secure_url" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg"/><meta property="og:image:type" content="image/jpeg"/><meta property="og:image:width" content="1200"/><meta property="og:image:height" content="627"/><meta property="og:image:alt" content="Menuiserie"/><title>Accueil | Philippe Vandenbrande | Menuisier & Charpentier</title><link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png"><link rel="stylesheet" href="./css/main.css" type="text/css"><link rel="stylesheet" href="./css/font-colibri.css" type="text/css"><link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css"><link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css"><link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css"><script type="text/javascript" src="./js/tarteaucitron.fr.js" async></script><script type="text/javascript" src="./js/tarteaucitron.services.js" async></script><style type="text/css">div#tarteaucitronRoot.tarteaucitronBeforeVisible:before{content: '';position: fixed;width: 100%;height: 100%;background: white;top: 0;left: 0;z-index: 999;opacity: 0.5;}div#tarteaucitronAlertBig:before{content: '';font-size: 50px;}body #tarteaucitronRoot div#tarteaucitronAlertBig{width: 60%;min-width: 285px;height: auto;margin: auto;left: 50%;top: 50%;transform: translate(-50%, -50%);box-shadow: 0 0 9000px #000;border-radius: 20px;padding: 50px 0;}span#tarteaucitronDisclaimerAlert{padding: 0 30px;}#tarteaucitronRoot span#tarteaucitronDisclaimerAlert{margin: 50px 0;display: block;text-align: center;font-size: 21px;}</style><script type="text/javascript" src="./js/" async></script></head><body class="home" style=""><div class="page_loader"></div><header role="banner"><a id="toggle" data-toggle="deploy_h" data-toggledest="body"><i><span></span><span></span><span></span></i></a><h1 id="logo"> <a href="index.html"> <img class="lodjo" src="image/logophil2.png" alt="logo philippe vandenbrande"> </a> </h1><nav role="navigation" id="menu"><ul class="fst"><li><a href="./index.html">Accueil</a></li><li><a href="./projets.html">Réalisations</a></li><li><a href="./propos.html">A propos</a></li><li><a href="./contact.html">Contact</a></li></ul></nav></header><main role="main"><div id="home_slider" class="cycle-slideshow" data-cycle-fx="fade" data-cycle-slides=".slide" data-cycle-timeout="5000" data-cycle-speed="1000" data-cycle-log="false" data-cycle-caption="#sliderCaption" data-cycle-caption-template="&lt;h2&gt;{{caption}}&lt;/h2&gt;" style="overflow: hidden; position: relative;"><div id="sliderCaption"><h2></h2></div><div class="slide cycle-slide" data-caption="L&#39;art du bois vient avec la patience et la sagesse. Chaque mouvement trouve sa place pour que l'ensemble prenne vie." style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden;"><img src="./image/menuiserie11.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;"></div><div class="slide cycle-slide cycle-slide-active" data-caption="Un savoir-faire unique forgé avec le temps l'experience et la passion d'un véritable artisan" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;"><img src="./image/menuiserie22.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;"> </div><div class="slide cycle-slide cycle-slide-active" data-caption="Le bois est la plus noble des matière de par sa nature et son histoire." style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;"><img src="./image/menuiserie33.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;"> </div><div class="slide cycle-slide cycle-slide-active" data-caption="Venez découvrir le véritable artisanat. Mon engagement, votre satisfaction d'un travail unique et sur-mesure" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; opacity: 1; display: block;"><img src="./image/menuiserie44.jpg" alt="" style="position: absolute; top: -99px; left: 0px; width: 1536px; height: 864px;"></div>></div></main><footer role="contentinfo"></footer><script type="text/javascript" src="./js/tarteaucitron.js" async></script><script type="text/javascript" src="./js/jquery.min.js"></script><script type="text/javascript" src="./js/jquery-migrate.min.js" async></script><script type="text/javascript" src="./js/validationEngine.js" async></script><script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script><script type="text/javascript" src="./js/jquery.cycle2.min.js"></script><script type="text/javascript" src="./js/colibri-antispam.js" async></script><script type="text/javascript" src="./js/jquery.imagefit.js" async></script><script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script><script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script><script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script><script type="text/javascript" src="./js/front-socle.js" async></script><script type="text/javascript">function fitting(){$('#home_slider').imagefit();}$(function(){$(window).load(function(){fitting(); $(window).resize(function(){fitting();});});});</script></body></html>
